[project]
name = "data-analysis-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pydeck>=0.9.2",
    "redis>=5",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
